--- a/PAGES/8f_TS-gotchas/index.html
+++ b/PAGES/8f_TS-gotchas/index.html
@@ -396,6 +396,21 @@ section a:hover{
 }
 
 
+</style>
+
+
+
+<!-- FOR OFFSETTING LINKS -->
+<style>
+ 
+  :target {
+    scroll-margin-top: 40px; 
+  }
+  
+  .own-anchors a{
+  scroll-margin-top: 4em;
+  }
+
 </style> 
  <!-- <div class="left_bar" style="color:white;">
     <div style="float:center; align-items:center; justify-content: center; height:160px; width:calc(90px * 1.55165);">
@@ -978,7 +993,7 @@ color: white;
 .julia_repl_NoFormat .akin_to_pre{  
   line-height: 1.35;
   color      : #DCDCDC;
-  font-size  : 100%;
+  font-size  : 95%;
   margin     : 0;
   padding    : 0;
 }
@@ -1022,7 +1037,7 @@ color: white;
 .mixed_output_NoFormat pre{
   line-height: 1.35;
   color      : #DCDCDC;
-  font-size  : 100%;
+  font-size  : 95%;
   margin     : 0;
   padding    : 0;
 }
@@ -2506,7 +2521,7 @@ color: white;
  <div class=note style="width:62%">  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">
       <b> Code Script</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/8f_TS-gotchas/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>  <div style="margin-bottom:-2em"></div>
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2516,7 +2531,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="gotcha_1_integers_and_floats" class="scrollspy section-bg-color">
+<section id="gotcha_1_integers_and_floats" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2555,7 +2570,7 @@ end
     </div>
   </div>
 </section>
-<section id="gotcha_2_collections_of_collections" class="scrollspy">
+<section id="gotcha_2_collections_of_collections" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2599,7 +2614,7 @@ end
     </div>
   </div>
 </section>
-<section id="gotcha_3_barrier_functions" class="scrollspy section-bg-color">
+<section id="gotcha_3_barrier_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2657,7 +2672,7 @@ foo&#40;data&#41; &#61; operation&#33;&#40;data&#91;2&#93;&#41;
     </div>
   </div>
 </section>
-<section id="gotcha_4_inference_is_by_type_not_by_value" class="scrollspy">
+<section id="gotcha_4_inference_is_by_type_not_by_value" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2779,7 +2794,7 @@ end
     </div>
   </div>
 </section>
-<section id="gotcha_5_variables_as_default_values_for_keyword_arguments" class="scrollspy section-bg-color">
+<section id="gotcha_5_variables_as_default_values_for_keyword_arguments" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2857,7 +2872,7 @@ const β &#61; 1
     </div>
   </div>
 </section>
-<section id="gotcha_6_closures_can_easily_introduce_type_instabilities" class="scrollspy">
+<section id="gotcha_6_closures_can_easily_introduce_type_instabilities" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3297,7 +3312,7 @@ end
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified May 29, 2024 
+          © Martin Alfaro <br>Last Modified June 5, 2024 
       </span> 
   </div> 
 </footer>
@@ -3382,12 +3397,7 @@ function goToNextPage() {
 }
 
 
-</script>
-
-
-
-
-</div><!-- CONTENT ENDS HERE -->
+</script></div><!-- CONTENT ENDS HERE -->
 
 <!-- ADDED BY FRANKLIN -->
   
@@ -4021,4 +4031,18 @@ document.addEventListener('keydown', (e) => {
     </script>
 
 
+
+
+<!-- <script>
+
+  $('a[href*="#"]').on('click', function (event) {
+    event.preventDefault();
+    var target = $(this.hash);
+    var offset = 500; // adjust this value to fit your needs
+    $('html, body').animate({
+      scrollTop: target.offset().top - offset
+    }, 500);
+  });
+
+</script> -->
 
