--- a/PAGES/8b_TS-globalVariables/index.html
+++ b/PAGES/8b_TS-globalVariables/index.html
@@ -396,6 +396,21 @@ section a:hover{
 }
 
 
+</style>
+
+
+
+<!-- FOR OFFSETTING LINKS -->
+<style>
+ 
+  :target {
+    scroll-margin-top: 40px; 
+  }
+  
+  .own-anchors a{
+  scroll-margin-top: 4em;
+  }
+
 </style> 
  <!-- <div class="left_bar" style="color:white;">
     <div style="float:center; align-items:center; justify-content: center; height:160px; width:calc(90px * 1.55165);">
@@ -978,7 +993,7 @@ color: white;
 .julia_repl_NoFormat .akin_to_pre{  
   line-height: 1.35;
   color      : #DCDCDC;
-  font-size  : 100%;
+  font-size  : 95%;
   margin     : 0;
   padding    : 0;
 }
@@ -1022,7 +1037,7 @@ color: white;
 .mixed_output_NoFormat pre{
   line-height: 1.35;
   color      : #DCDCDC;
-  font-size  : 100%;
+  font-size  : 95%;
   margin     : 0;
   padding    : 0;
 }
@@ -2503,7 +2518,7 @@ color: white;
 
  
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2511,16 +2526,19 @@ color: white;
 <p><span style="color: rgb(62, 121, 180);"><strong>Global variables</strong></span> can be accessed and modified anywhere in the code. In contrast, <span style="color: rgb(62, 121, 180);"><strong>local variables</strong></span> are only accessible within a specific scope &#40;e.g., in a function or a loop&#41;. In particular, we&#39;ll exclusively refer to local variables as those in relation to a function&#39;s scope, which encompass both function arguments and variables defined inside the function.</p>
 <p><strong>Operations with global variables are a common source of type instability</strong>: since they can be redefined at any point, Julia treats them as having type <code>Any</code>. This type ambiguity explains why performing operations in the global scope is slow—the compiler has to consider multiple possible methods for each operation, precluding specialization.</p>
 <p>This section explores two approaches to making operations with global variables type-stable: type-annotating global variables and declaring global variables as constants. The latter approach is particularly convenient for variables that remain unmodified throughout the script, like <code>π &#61; 3.1415926535897</code>.</p>
+ <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
+      <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
+      <b>Warning!</b> - You Should Always Wrap Code in a Function </span>  </div>  <div class=content>     Keep in mind that <strong>functions implement additional optimizations</strong> that aren&#39;t possible in the global scope. Due to this, even if you implement the fixes for global variables that we propose in this section, you should additionally rely on functions when you care about performance.  </div>  </div>
 <p>      </div>
     </div>
   </div>
 </section>
-<section id="when_are_we_using_global_variables" class="scrollspy">
+<section id="when_are_we_using_global_variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>When Are We Using Global Variables?</h2></p>
-<p>Self-contained functions are those relying solely on their arguments and locally defined variables, without any dependency on global variables. The first tab below shows an example of a self-contained function. In contrast, the subsequent two tabs illustrate scenarios using global variables. They showcase a function employing variables defined outside its scope and operations performed in the global scope. </p>
+<p>Self-contained functions solely rely on their arguments and locally defined variables, without depending on global variables. The first tab below shows an example of a self-contained function. In contrast, the subsequent two tabs illustrate scenarios operating with global variables. They include a function employing variables defined outside its scope, as well as operations performed in the global scope. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2561,16 +2579,13 @@ z &#61; log&#40;y&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="achieving_type_stability_with_global_variables" class="scrollspy section-bg-color">
+<section id="achieving_type_stability_with_global_variables" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Achieving Type Stability With Global Variables</h2></p>
 <p>Working with global variables is a practice often discouraged in modern programming paradigms, which additionally affects performance by turning operations type unstable. However, there are some scenarios where global variables could come in handy. In that case, there are two approaches addressing the performance issue: setting a global variable as a constant or annotating it with a concrete type. </p>
 <p>Note, nonetheless, that writing self-contained functions should be the first option to consider. Aside from performance considerations, these functions maintain the code modular and easier to understand, without the need to track global variables across the script to discern their purpose.</p>
- <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> - You Should Still Wrap Code in a Function </span>  </div>  <div class=content>     Keep in mind that <strong>functions implement additional optimizations</strong> that aren&#39;t possible in the global scope. Due to this, even if you implement the fixes for global variables that we propose in this section, you should additionally rely on functions when you care about performance.  </div>  </div>
  <h4> Constant Global Variables </h4>
 <p>Declaring a global variable as a constant requires adding the keyword <code>const</code> before the variable&#39;s name, such as <code>const x &#61; 3</code>. Any variable can be declared as a constant, including vectors, as the following examples show.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
@@ -2697,7 +2712,7 @@ y &#61; &quot;world&quot;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified May 29, 2024 
+          © Martin Alfaro <br>Last Modified June 5, 2024 
       </span> 
   </div> 
 </footer>
@@ -2782,12 +2797,7 @@ function goToNextPage() {
 }
 
 
-</script>
-
-
-
-
-</div><!-- CONTENT ENDS HERE -->
+</script></div><!-- CONTENT ENDS HERE -->
 
 <!-- ADDED BY FRANKLIN -->
   
@@ -3405,4 +3415,18 @@ document.addEventListener('keydown', (e) => {
     </script>
 
 
+
+
+<!-- <script>
+
+  $('a[href*="#"]').on('click', function (event) {
+    event.preventDefault();
+    var target = $(this.hash);
+    var offset = 500; // adjust this value to fit your needs
+    $('html, body').animate({
+      scrollTop: target.offset().top - offset
+    }, 500);
+  });
+
+</script> -->
 
