--- a/index.html
+++ b/index.html
@@ -395,6 +395,21 @@ section a:hover{
 }
 
 
+</style>
+
+
+
+<!-- FOR OFFSETTING LINKS -->
+<style>
+ 
+  :target {
+    scroll-margin-top: 40px; 
+  }
+  
+  .own-anchors a{
+  scroll-margin-top: 4em;
+  }
+
 </style> 
  <!-- <div class="left_bar" style="color:white;">
     <div style="float:center; align-items:center; justify-content: center; height:160px; width:calc(90px * 1.55165);">
@@ -1142,7 +1157,7 @@ section{
 .julia_repl_NoFormat .akin_to_pre{  
   line-height: 1.35;
   color      : #DCDCDC;
-  font-size  : 100%;
+  font-size  : 95%;
   margin     : 0;
   padding    : 0;
 }
@@ -1186,7 +1201,7 @@ section{
 .mixed_output_NoFormat pre{
   line-height: 1.35;
   color      : #DCDCDC;
-  font-size  : 100%;
+  font-size  : 95%;
   margin     : 0;
   padding    : 0;
 }
@@ -2221,7 +2236,7 @@ color: white;
       <span class="ctrl-text">( <kbd>Ctrl + 🠚</kbd> )</span>
       <img src="/julia_book/assets/icons/next-page.png"
       style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-  <span class="center-text">  © Martin Alfaro <br>Last Modified May 29, 2024 </span>  
+  <span class="center-text">  © Martin Alfaro <br>Last Modified June 5, 2024 </span>  
 </div>
 <!-- </p>  -->
 </footer>
@@ -2305,12 +2320,7 @@ function goToNextPage() {
 }
 
 
-</script>
-
-
-
-
-</div><!-- CONTENT ENDS HERE -->
+</script></div><!-- CONTENT ENDS HERE -->
 
 <!-- ADDED BY FRANKLIN -->
   
@@ -2763,4 +2773,18 @@ for multiple pics in a row
     </script>
 
 
+
+
+<!-- <script>
+
+  $('a[href*="#"]').on('click', function (event) {
+    event.preventDefault();
+    var target = $(this.hash);
+    var offset = 500; // adjust this value to fit your needs
+    $('html, body').animate({
+      scrollTop: target.offset().top - offset
+    }, 500);
+  });
+
+</script> -->
 
